# spotify-downloader-1

./: .cache  .coverage  .env  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  burn_disc.ps1  burn_disc_imapi.ps1  config.json  coverage.xml  enhanced_methods.py  enhancement_summary.txt  logger_config.py  pyproject.toml  pytest.ini  requirements.txt  run_spotify.bat  run_spotify_fixed.bat  setup.py  spot_burn.py  spot_menu.py  spotify_burner.py  spotify_burner_backup.py  spotify_launcher.bat  test_ascii_art.py  test_spotdl.py  tests.py  update_cdburnerxp_path.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  python-package.yml
config/: settings.ini
src/: downloader.py  interface.py  playlist_manager.py  settings.py  settings_modal.py  spotify_api.py  tui.css  tui.py
tests/: test_downloader.py  test_interface.py  test_playlist_manager.py  test_spotify_api.py
